app/components/navigation/Menu.module.css
.menu {
  display: inline-block;
  color: var(--color-tertiary-darker);
  position: relative;
}

.menu ul {
  display: flex;
  flex-direction: column;
  gap: 3.4rem;
  font-family: var(--font-advent-pro);
}

.menuLink {
  position: relative;
  display: inline-block;
}

.menuLinkTextClipped {
  position: absolute;
  left: 0;
  top: 0;
  pointer-events: none;
}

.menuLinkText svg path {
  stroke: var(--color-tertiary-darkest);
}

.menuLinkText svg path,
.menuLinkTextActive svg path {
  transition: stroke 0.5s ease;
}

.menuLink:hover svg path,
.menuLinkTextActive svg path {
  stroke: var(--color-secondary);
}

.menuImage {
  position: absolute;
  left: 0;
  top: 0;
  width: 150%;
  height: 150%;
  background-size: contain;
  background-repeat: repeat-x;
  background-image: url('../../../public/wave.svg');
  transition: background-position 1s ease;
}

